css/style.css
html {
  font-family: "Source Sans Pro", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-align: left;
  color: #eee;
  margin-top: 60px;
  background-color: black;
}

body {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  width: 33%;
}

a {
  text-decoration: none;
  color: #eee;
}

header {
  grid-column: 2 / span 2;
}

main {
  grid-column: 2 / span 2;
}

@media only screen and (max-width: 800px) {
  body {
    grid-template-columns: repeat(6, 1fr);
    width: 100%;
  }
  header {
    grid-column: 2 / span 4;
  }
  main {
    grid-column: 2 / span 4;
  }
}

#background {
  position: fixed;
  z-index: -1;
  top: 0;
  left: 0;
  height: 100%;
}

ul {
  padding-inline-start: 1.5em;
}

h1,
.fs1 {
  font-size: 2em;
}

h2,
.fs2 {
  font-size: 1.5em;
}

h3,
.fs3 {
  font-size: 1.17em;
}

h1.underline {
  color: #eee;
  position: relative;
  width: fit-content;
}

.underline::after {
  content: "";
  bottom: 0;
  position: absolute;
  height: 5px;
  background-color: #ff6961;
  transition: 0.5s;
}

.underline:hover::after {
  animation-name: underline;
  animation-duration: 1s;
  width: calc(100% - 2.75ch);
  left: 2.75ch;
}

@keyframes underline {
  from {
    left: 0;
    width: 0;
  }
  33% {
    left: 0;
    width: 2ch;
  }
  to {
    width: calc(100% - 2.75ch);
    left: 2.75ch;
  }
}

header i.fab,
header i.far {
  color: #eee;
  font-size: 1.5em;
  margin: 0.25em;
}

i.fas,
i.far {
  font-size: 1.25em;
  margin: 0.125em;
}

html.red i:hover {
  color: #ff6961;
}

html.red .underline::after {
  background-color: #ff6961;
}

html.red input[type="submit"],
html.red button {
  background-color: #ff6961;
}

html.green i:hover {
  color: #c1e1c1;
}

html.green .underline::after {
  background-color: #c1e1c1;
}

html.green input[type="submit"],
html.green button {
  background-color: #c1e1c1;
}

html.blue i:hover {
  color: #a7c7e7;
}

html.blue .underline::after {
  background-color: #a7c7e7;
}

html.blue input[type="submit"],
html.blue button {
  background-color: #a7c7e7;
}

.flex-apart-wrap {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.flex-apart-wrap > * {
  margin: 0;
}

.flex-apart-wrap > h3 {
  margin-right: 1ch;
}

.dots {
  position: fixed;
  bottom: 15px;
  right: 15px;
}

.dots > i:hover:not(.fas) {
  font-weight: 800;
  opacity: 0.66;
}

/* Modal */

.modal-background {
  display: none;
}

.is-open .modal-background {
  display: block;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(0, 0, 0, 0.6);
  display: flex;
  justify-content: center;
  align-items: center;
  backdrop-filter: blur(5px);
}

.modal-dialog {
  background: rgba(0, 0, 0, 0.9);
  padding: 1em;
  border-radius: 10px;
}

.modal-dialog header {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.x-btn {
  display: block;
  margin-left: auto;
  border-radius: 50%;
  width: 20px;
  height: 20px;
  text-align: center;
  border: none;
}

.modal-content {
  margin: -1.5em 2.5em 1em 2.5em;
}

input,
textarea {
  display: block;
  width: 100%;
  padding: 0.375rem 0.75rem;
  box-sizing: border-box;
  font-size: 1rem;
  line-height: 1.5;
  color: #eee;
  background-color: #eee2;
  background-clip: padding-box;
  border: 1px solid #82878c;
  border-radius: 0.25rem;
  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}
/* Input element default style */
textarea {
  margin-bottom: 1.25em;
  font-style: normal;
  font-variant-ligatures: normal;
  font-variant-caps: normal;
  font-variant-numeric: normal;
  font-variant-east-asian: normal;
  font-weight: 400;
  font-stretch: normal;
  line-height: normal;
  font-family: Arial;
}
textarea {
  min-height: 2.25rem;
  resize: vertical;
}
input[type="submit"] {
  margin: 0 auto;
  width: fit-content;
  /* Primary */
  color: #fff;
  border-color: #494fff11;
  /* Button Bootstrap */
  display: inline-block;
  font-weight: 400;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: 1px solid transparent;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  border-radius: 0.25rem;
  transition: color 0.15s;
  -webkit-appearance: none; /* ios fix */
}

